# electron

./: BUILD.gn  DEPS  electron_paks.gni  filenames.gni  package-lock.json  package.json
.circleci/: config.yml
.vsts/: lint.yml
atom/browser/: atom_browser_client.cc  atom_browser_client.h  atom_browser_main_parts.cc  common_web_contents_delegate.cc  web_contents_preferences.cc
atom/browser/api/: atom_api_content_tracing.cc  atom_api_desktop_capturer.cc  atom_api_desktop_capturer.h  atom_api_session.cc  atom_api_view.h  (+2 more)
atom/common/: heap_snapshot.cc  heap_snapshot.h  options_switches.cc  options_switches.h
atom/renderer/: atom_render_frame_observer.cc  atom_sandboxed_renderer_client.cc  renderer_client_base.cc
brightray/: BUILD.gn
brightray/browser/: browser_client.cc  browser_main_parts.cc  inspectable_web_contents.h  inspectable_web_contents_impl.cc  inspectable_web_contents_impl.h  inspectable_web_contents_view.h  inspectable_web_contents_view_mac.h  inspectable_web_contents_view_mac.mm
chromium_src/: BUILD.gn
docs/api/: browser-window.md  dialog.md  process.md  web-contents.md  webview-tag.md
lib/browser/: guest-view-manager.js  guest-window-manager.js  rpc-server.js
lib/renderer/: heap-snapshot.js  init.js
lib/sandboxed_renderer/: init.js  remote-require.js
script/: check-relative-doc-links.py  ci-release-build.js  lint.js  spec-runner.js  verify-ffmpeg.py
spec/: api-browser-window-spec.js  api-native-image-spec.js  api-net-log-spec.js  api-process-spec.js  api-session-spec.js  api-web-contents-spec.js  api-web-frame-spec.js  webview-spec.js
(+35 files in other folders)
