# Copyright (c) 2018 GitHub, Inc.
# Use of this source code is governed by the MIT license that can be
# found in the LICENSE file.

# Builds some of the chrome sources that Electron depends
# on unconditionally.
source_set("chrome") {
  visibility = [ "//electron:electron_lib" ]
  sources = [
    "//chrome/browser/net/chrome_mojo_proxy_resolver_factory.cc",
    "//chrome/browser/net/chrome_mojo_proxy_resolver_factory.h",
    "//chrome/browser/net/chrome_net_log_helper.cc",
    "//chrome/browser/net/chrome_net_log_helper.h",
    "//chrome/browser/net/proxy_config_monitor.cc",
    "//chrome/browser/net/proxy_config_monitor.h",
    "//chrome/browser/net/proxy_service_factory.cc",
    "//chrome/browser/net/proxy_service_factory.h",
    "//chrome/browser/ssl/security_state_tab_helper.cc",
    "//chrome/browser/ssl/security_state_tab_helper.h",
    "//chrome/common/chrome_constants.cc",
    "//chrome/common/chrome_constants.h",
    "//chrome/common/chrome_switches.cc",
    "//chrome/common/chrome_switches.h",
    "//chrome/common/pref_names.cc",
    "//chrome/common/pref_names.h",
  ]
  public_deps = [
    "//content/public/browser",
  ]
  deps = [
    "//components/proxy_config",
    "//components/security_state/content",
  ]
}
